--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div id="diva" class="container">
     <header class="header">
       <h1>Mr. Camel</h1>
       <div class="social">
@@ -134,6 +134,7 @@
       <h2>About Me</h2>
       <p>I don't look like some handsome horse, but I am a real desert king. I can survive days without water.</p>
       <h2>My Career</h2>
+      <p>I work as a web developer for a company that makes websites for camel businesses.</p>
       <p>I work as a web developer for a company that makes websites for camel businesses.</p>
       <hr><br>
       <h2>How Can I Help You?</h2>
